--- a/index.html
+++ b/index.html
@@ -3,13 +3,50 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Book List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Book List</title>
 
   </head>
   <body>
+    <div class="container">
+      <h3>Add Book</h3>
+      <form id="book-form">
+        <div>
+          <label for="title" class="u-full-width">Title</label>
+          <input type="text" id="title-input" class="u-full-width">
+        </div>
 
+        <div>
+          <label for="author" class="u-full-width">Author</label>
+          <input type="text" id="author-input" class="u-full-width">
+        </div>
+
+        <div>
+          <label for="isbn" class="u-full-width">ISBN#</label>
+          <input type="text" id="isbn-input" class="u-full-width">
+        </div>
+
+        <div>
+          <input type="submit" id="submit-button" value="SUBMIT" class="u-full-width">
+        </div>
+        
+      </form>
+
+      <table class="u-full-width">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Author</th>
+            <th>ISBN#</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody id="table-body">
+
+        </tbody>
+      </table>
+    </div>
 
 
     <script src="js/script.js"></script>
