--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
       </form>
 
-      <table class="u-full-width">
+      <table class="u-full-width" id="book-list">
         <thead>
           <tr>
             <th>Title</th>
